--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
 <body
   class="layout--{{ page.layout | default: layout.layout }} skin--{{ site.minimal_mistakes_skin | default: 'default' }} lang--{{ page.lang | default: site.lang }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}"
-  dir="{% if page.rtl %}rtl{% else %}ltr{% endif %}"></body>
+  dir="{% if page.rtl %}rtl{% else %}ltr{% endif %}">
 
 {% include_cached skip-links.html %}
 {% include header__wordplay.html %}
@@ -40,11 +40,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@barba/core@2.9.7/dist/barba.umd.min.js"></script>
     {% include scripts.html %}
+    <script src="{{ '/assets/js/wordplay-animation.js' | relative_url }}"></script>
     <script src="{{ '/assets/js/app.js' | relative_url }}"></script>
-  </body>
-</html>
-
-
 </body>
-
 </html>
