--- a/_sass/minimal-mistakes/_wordplay.scss
+++ b/_sass/minimal-mistakes/_wordplay.scss
@@ -52,9 +52,9 @@
 }
 
 // Language flip trigger
-body.show-hebrew .word {
-  transform: rotateX(180deg);
-}
+//body.show-hebrew .word {
+//  transform: rotateX(180deg);
+//}
 
 
 // --- Animation Helper Class ---
