--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,10 +37,19 @@
     {% include_cached footer.html %}
   </footer>
 </div>
+<script>
+  // Makes your Jekyll navigation data available to the app.js script
+  window.WORDPLAY_DATA = {
+    en: {{ site.data.navigation.main.en | jsonify }},
+    he: {{ site.data.navigation.main.he | jsonify }}
+  };
+  window.CONFIG_TEXT = {{ site.data.config-text | jsonify }};
+</script>
+
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@barba/core@2.9.7/dist/barba.umd.min.js"></script>
     {% include scripts.html %}
-    <script src="{{ '/assets/js/wordplay-animation.js' | relative_url }}"></script>
+  <!--   <script src="{{ '/assets/js/wordplay-animation.js' | relative_url }}"></script> -->
     <script src="{{ '/assets/js/app.js' | relative_url }}"></script>
 </body>
 </html>
