--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,12 @@
 <meta charset="utf-8">
 
+<style>
+    #wordplay-header {
+        opacity: 0;
+        visibility: hidden;
+    }
+</style>
+
 {% include seo.html %}
 
 {% unless site.atom_feed.hide %}
@@ -16,7 +23,6 @@
   {%- endif %}
 </script>
 
-<!-- For all browsers -->
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 <link rel="preload" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css"></noscript>
