--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,20 +10,16 @@
   {% include head/custom.html %}
 </head>
 
-<body
-  data-barba="wrapper"
-  class="layout--{{ page.layout | default: layout.layout }} skin--{{ site.minimal_mistakes_skin | default: 'default' }} lang--{{ page.lang | default: site.lang }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}"
-  dir="{% if page.rtl %}rtl{% else %}ltr{% endif %}">
+<body class="layout--{{ page.layout | default: layout.layout }} skin--{{ site.minimal_mistakes_skin | default: 'default' }} lang--{{ page.lang | default: site.lang }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}" dir="{% if page.rtl %}rtl{% else %}ltr{% endif %}">
 
 {% include_cached skip-links.html %}
 {% include header__wordplay.html %}
-
-
+<div data-barba="wrapper">
   <main data-barba="container" data-barba-namespace="home">
     {{ content }}
     {% include after-content.html %}
   </main>
-
+</div>
 
 <div id="footer" class="page__footer">
   <footer>
@@ -32,9 +28,7 @@
   </footer>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-<script src="https://unpkg.com/@barba/core"></script>
-<script src="https://unpkg.com/@barba/css"></script>
-    {% include scripts.html %}
+    <script src="https://unpkg.com/@barba/core/dist/barba.umd.js"></script>
     <script src="{{ '/assets/js/wordplay.js' | relative_url }}"></script>
 </body>
 </html>
