--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,8 @@
 {% include_cached skip-links.html %}
 {% include header__wordplay.html %}
 <div data-barba="wrapper">
-  <main data-barba="container" data-barba-namespace="home">
+  <main data-barba="container"
+        data-barba-namespace="{% if page.url == '/' %}place{% else %}{{ page.title | slugify }}{% endif %}">
     {{ content }}
     {% include after-content.html %}
   </main>
@@ -27,8 +28,6 @@
     {% include_cached footer.html %}
   </footer>
 </div>
-    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://unpkg.com/@barba/core/dist/barba.umd.js"></script>
-    <script src="{{ '/assets/js/wordplay.js' | relative_url }}"></script>
+    <script type="module" src="{{ '/assets/js/wordplay.js' | relative_url }}"></script>
 </body>
 </html>
